<resources>
    <string name="app_name">Tic Tac Toe</string>
    <string name="one_app_one_game_made_by_atbane_amine_for_adnroid_exam_on_dec_17th_2018">One app, one game, Made by
        ATBANE Amine for Adnroid exam on Dec 17th 2018.
    </string>
    <string name="tic_tac_toe">Tic Tac Toe</string>
    <string name="pleas_enter_your_name">Pleas enter your name :</string>
    <string name="todo">TODO</string>
    <string name="name">Name</string>
    <string name="start">Start</string>
    <string name="made_at">Made at</string>
</resources>
