<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".HomeScreen">

    <ImageView
            android:layout_width="181dp"
            android:layout_height="147dp" app:srcCompat="@drawable/img_tictactoe"
            android:id="@+id/logo" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline4" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:contentDescription="@string/todo"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.36" android:id="@+id/guideline"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.1" android:id="@+id/guideline3"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.03"
            android:id="@+id/guideline4"/>
    <android.support.constraint.Guideline
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.9" android:id="@+id/guideline5"/>
    <TextView
            android:text="@string/one_app_one_game_made_by_atbane_amine_for_adnroid_exam_on_dec_17th_2018"
            android:layout_width="244dp"
            android:layout_height="64dp"
            android:id="@+id/credit"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline6" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline7" app:layout_constraintHorizontal_bias="0.51"
            app:layout_constraintVertical_bias="0.0"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.48"
            android:id="@+id/guideline6"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="317dp" android:id="@+id/guideline7"/>
    <TextView
            android:text="@string/pleas_enter_your_name"
            android:layout_width="242dp"
            android:layout_height="29dp"
            android:id="@+id/enter_name" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:layout_marginStart="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline7" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline8"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="359dp" android:id="@+id/guideline8"/>
    <EditText
            android:layout_width="251dp"
            android:layout_height="40dp"
            android:inputType="textPersonName"
            android:text="@string/name"
            android:ems="10"
            android:id="@+id/name" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline8" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toStartOf="@+id/guideline5" android:layout_marginRight="8dp"
            android:layout_marginStart="8dp" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="8dp" android:autofillHints=""/>
    <Button
            android:text="@string/start"
            android:layout_width="111dp"
            android:layout_height="38dp"
            android:id="@+id/start"
            app:layout_constraintTop_toBottomOf="@+id/name" app:layout_constraintStart_toStartOf="@+id/guideline3"
            android:layout_marginLeft="96dp" android:layout_marginStart="96dp" android:layout_marginTop="8dp"/>
    <ImageView
            android:layout_width="48dp"
            android:layout_height="38dp" app:srcCompat="@drawable/img_epita"
            android:id="@+id/epita" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline2" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            android:contentDescription="@string/todo"/>
    <android.support.constraint.Guideline
            android:orientation="horizontal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" app:layout_constraintGuide_begin="503dp" android:id="@+id/guideline2"/>
    <TextView
            android:text="@string/made_at"
            android:layout_width="wrap_content"
            android:layout_height="19dp"
            android:id="@+id/textView3" app:layout_constraintEnd_toStartOf="@+id/epita" android:layout_marginEnd="4dp"
            android:layout_marginRight="4dp"
            android:layout_marginTop="16dp" app:layout_constraintTop_toBottomOf="@+id/start"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toTopOf="@+id/guideline2"
            app:layout_constraintVertical_bias="0.0"/>
    <TextView
            android:text="Tic Tac Toe"
            android:layout_width="157dp"
            android:layout_height="41dp"
            android:id="@+id/title"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/guideline6" android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="@+id/guideline" app:layout_constraintEnd_toStartOf="@+id/guideline5"
            android:layout_marginEnd="8dp" android:layout_marginRight="8dp"
            app:layout_constraintStart_toStartOf="@+id/guideline3" android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold|italic" android:textSize="30sp"/>
    //>
</android.support.constraint.ConstraintLayout>